viewport display not showing the correct object transform (location & scale) with the lastest nightly build #70345

Closed
opened 2019-09-29 05:53:40 +02:00 by Tyler · 14 comments

System Information
Operating system: arch linux
Graphics card: gtx 1060

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen) 2.81, 44d042094e
Worked: (optional) 2.81, 1c1a3198af

Short description of error
VIEWPORT_BUG.png

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: arch linux Graphics card: gtx 1060 **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) 2.81, 44d042094e21 Worked: (optional) 2.81, 1c1a3198af9d **Short description of error** ![VIEWPORT_BUG.png](https://archive.blender.org/developer/F7779287/VIEWPORT_BUG.png) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @Tyler-Foo

Added subscriber: @Tyler-Foo

#70359 was marked as duplicate of this issue

#70359 was marked as duplicate of this issue

#70343 was marked as duplicate of this issue

#70343 was marked as duplicate of this issue

#70354 was marked as duplicate of this issue

#70354 was marked as duplicate of this issue

Added subscriber: @RobTuytel

Added subscriber: @RobTuytel

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-28 23:19, hash: 44d042094e
Worked: (optional)

I can confirm this scaling bug. Here a short video demonstration with previous and latest build.
scaling_scene.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-28 23:19, hash: `44d042094e` Worked: (optional) I can confirm this scaling bug. Here a short video demonstration with previous and latest build. [scaling_scene.mp4](https://archive.blender.org/developer/F7779501/scaling_scene.mp4)
Clément Foucault was assigned by Brecht Van Lommel 2019-09-29 14:26:11 +02:00

Added subscriber: @SergeyGolubev

Added subscriber: @SergeyGolubev

Added subscriber: @cschumann

Added subscriber: @cschumann

Added subscriber: @crantisz

Added subscriber: @crantisz

duplicate: https:*developer.blender.org/T70343 https:*developer.blender.org/T70359

duplicate: https:*developer.blender.org/T70343 https:*developer.blender.org/T70359

This issue was referenced by 24be998b98

This issue was referenced by 24be998b986cb3bdc86527bfcbd792a5c4e7155e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @cgroves, @harsan81-4

Added subscribers: @cgroves, @harsan81-4

Added subscribers: @koko_ze, @ThatAsherGuy, @brecht

Added subscribers: @koko_ze, @ThatAsherGuy, @brecht
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70345
No description provided.