Fix T70345: wrong transforms of objects after recent NVIDIA workaround

This reverts commit 44d042094e21b519b38a3d78761b64bb5ceeb350 and adds a
simpler workaround for just the node links display issue. There are other
issues though so this is not a full workaround.